css/component.css
	.grid-gallery ul {
		list-style: none;
		margin: 0;
		padding: 0;
	}

	.grid-gallery figure {
		margin: 0;
	}

	.video-figure {
		position: relative;
	}

	.video-title {
		width: 50%;
		position: absolute;
		left:25%;
		top:47%;
		color: #fff;
		text-align: center;
    text-shadow: 0px 0px 10px rgba(0,0,0,0.8),0px 0px 20px rgba(0,0,0,0.4);
  }

  .grid-gallery figure img {
  	margin: 0 auto;
  	display: block;
  	max-width: 100%;
  	max-height: 100%;
  }

  img.video-thumbs {
  	width: 238px;
  	height: 134px;
  }

  .grid-gallery figcaption h3 {
  	margin: 0;
  	padding: 0 0 0.5em;
  }

  .grid-gallery figcaption p {
  	margin: 0;
  }

  /* Grid style */
  .grid-wrap {
  	max-width: 69em;
  	margin: 0 auto;
  	padding: 0 1em 1.875em;
  }

  .grid {
  	margin: 0 auto;
  }

  .grid li {
  	width: 25%;
  	float: left;
  	cursor: pointer;
  }

  .grid figure {
  	padding: 15px;
  	-webkit-transition: opacity 0.2s;
  	transition: opacity 0.2s;
  }

  .grid li:hover figure {
  	opacity: 0.7;
  }

  /* Slideshow style */
  .slideshow {
  	position: fixed;
  	background: white;
  	width: 100%;
  	height: 100%;
  	top: 0;
  	left: 0;
  	z-index: 500;
  	opacity: 0;
  	visibility: hidden;
  	overflow: hidden;
  	-webkit-perspective: 1000px;
  	perspective: 1000px;
  	-webkit-transition: opacity 0.3s, visibility 0s 0.3s;
  	transition: opacity 0.3s, visibility 0s 0.3s;
  }

  .slideshow-open .slideshow {
  	opacity: 1;
  	visibility: visible;
  	-webkit-transition: opacity 0.3s;
  	transition: opacity 0.3s;
  }

  .slideshow ul {
  	width: 100%;
  	height: 100%;
  	-webkit-transform-style: preserve-3d;
  	transform-style: preserve-3d;
  	-webkit-transform: translate3d(0,0,150px);
  	transform: translate3d(0,0,150px);
  	-webkit-transition: -webkit-transform 0.3s;
  	transition: transform 0.3s;
  }

  .slideshow ul.animatable li {
  	-webkit-transition: -webkit-transform 0.3s;
  	transition: transform 0.3s;
  }

  .slideshow-open .slideshow ul {
  	-webkit-transform: translate3d(0,0,0);
  	transform: translate3d(0,0,0);
  }

  .slideshow li {
  	width: auto;
  	height: 100%;
  	position: absolute;
  	top: 50%;
  	left: 50%;
  	margin: -280px 0 0 -330px;
  	visibility: hidden;
  }

  .slideshow li.show {
  	visibility: visible;
  }

  .slideshow li:after {
  	content: '';
  	position: absolute;
  	width: 100%;
  	height: 100%;
  	top: 0;
  	left: 0;
  	background: white;
  	-webkit-transition: opacity 0.3s;
  	transition: opacity 0.3s;
  }

  .slideshow li.current:after {
  	visibility: hidden;
  	opacity: 0;
  	-webkit-transition: opacity 0.3s, visibility 0s 0.3s;
  	transition: opacity 0.3s, visibility 0s 0.3s;
  }

  .slideshow figure {
  	width: 100%;
  	height: 100%;
  }

  /* Overwriting show styles for currently viewed img */
  .current {
  	width: 70% !important;
    height: 94% !important;
    position: absolute !important;
    left: 14.5% !important;
    top: 9% !important;
  	margin: 0 auto !important;
    z-index: 100000000;
  }

  .current_video {
  	position: absolute !important;
  	left: 16% !important;
  	top: 22% !important;
  	margin: 0 auto !important;
  }


  /* Navigation */
  .slideshow nav span {
  	position: fixed;
  	z-index: 1000;
  	color: #000;
  	text-align: center;
  	padding: 3%;
  	cursor: pointer;
  	font-size: 2.2em;
  }

  .slideshow nav span.nav-prev,
  .slideshow nav span.nav-next {
  	top: 50%;
  	-webkit-transform: translateY(-50%);
  	transform: translateY(-50%);
  }

  .slideshow nav span.nav-next {
  	right: 0;
  }

  .slideshow nav span.nav-close {
  	top: 0;
  	right: 0;
  	padding: 0.5em 1em;
  	color: #000;
  }


  @media screen and (max-width: 60em) {
  	.grid li {
  		width: 33.3%;
  	}

  	.slideshow li {
  		width: 100%;
  		height: 100%;
  		top: 0;
  		left: 0;
  		margin: 0;
  	}

  	.slideshow li figure img {
  		width: auto;
  		margin: 0 auto;
  		max-width: 100%;
  		height: auto;
  	}

  	.slideshow nav span,
  	.slideshow nav span.nav-close {
  		font-size: 2.8em;
  		padding: 0.3em;
  	}

  	.info-keys {
  		display: none;
  	}
  }

  @media screen and (max-width: 35em) {
  	.grid li {
  		width: 50%;
  	}

  	.slideshow {
  		background: rgba(255,255,255,1);
  	}

  	.slideshow li:after {
  		background: rgba(255,255,255,1);
  	}

  	.slideshow nav span.nav-prev, .slideshow nav span.nav-next {
  		top: 35%;
  	}

  	.current_video {
  		top: 5% !important;
  	}
  }

  @media screen and (max-width: 24em) {
  	.grid li {
  		width: 100%;
  	}
  }

